--- a/src/styles/common/_reuse-parts.scss
+++ b/src/styles/common/_reuse-parts.scss
@@ -1,3 +1,23 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+    width: 1250px;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
 .btn {
     color: $main-color;
     border: 1px solid $main-color;
@@ -30,3 +50,4 @@
     font-weight: 700;
     color: rgb(51, 51, 51);
 }
+
