--- a/src/styles/parts/_top-teachers.scss
+++ b/src/styles/parts/_top-teachers.scss
@@ -92,6 +92,10 @@
 
 
 .teacher-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     z-index: 0;
     cursor: pointer;
     position: relative;
