feat: add new styles for modal and favorite users

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,6 @@
 @import 'parts/statistics';
 @import 'parts/favorites';
 @import 'parts/footer';
+
+@import 'base/modal';
+@import 'base/teacher-info';
