--- a/src/styles/common/_reuse-parts.scss
+++ b/src/styles/common/_reuse-parts.scss
@@ -51,3 +51,15 @@ li {
     color: rgb(51, 51, 51);
 }
 
+.invalid-field-message {
+    position: absolute;
+    right: 0;
+    color: red;
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+}
+
+.invalid-field {
+    border: 2px solid red;
+    border-radius: 5px;
+}
